grammar.js
    file: ($) =>
      seq(
        optional(seq($.module_declaration, $._virtual_end_decl)),
        optional($._import_list),
        optional($._top_decl_list)
      ),

    _import_list: ($) => repeat1(seq($.import_clause, $._virtual_end_decl)),
    _top_decl_list: ($) => repeat1(seq($._declaration, $._virtual_end_decl)),

    // MODULE DECLARATION

    _upper_case_identifier_without_leading_whitespace: ($) =>
      token.immediate(/[A-Z][a-zA-Z0-9_]*/),

    _lower_case_identifier_without_leading_whitespace: ($) =>
      token.immediate(/[a-z][a-zA-Z0-9_]*/),

    _dot_without_leading_whitespace: ($) => token.immediate("."),

    upper_case_qid: ($) =>
      prec.right(
        seq(
          $.upper_case_identifier,
          repeat(
            seq(
              alias($._dot_without_leading_whitespace, $.dot),
              alias(
                $._upper_case_identifier_without_leading_whitespace,
                $.upper_case_identifier
              )
            )
          )
        )
      ),

    value_qid: ($) =>
      choice(
        $.lower_case_identifier,
        seq(
          $.upper_case_identifier,
          alias($._dot_without_leading_whitespace, $.dot),
          repeat(
            seq(
              alias(
                $._upper_case_identifier_without_leading_whitespace,
                $.upper_case_identifier
              ),
              alias($._dot_without_leading_whitespace, $.dot)
            )
          ),
          alias(
            $._lower_case_identifier_without_leading_whitespace,
            $.lower_case_identifier
          )
        )
      ),

    value_declaration: ($) =>
      seq(
        $._internal_value_declaration_left,
        $.eq,
        field("body", $._expression)
      ),

    _internal_value_declaration_left: ($) =>
      choice(
        field("functionDeclarationLeft", $.function_declaration_left),
        field("pattern", $.pattern)
      ),

    function_declaration_left: ($) =>
      prec(
        3,
        seq(
          $.lower_case_identifier,
          field("pattern", repeat($._function_declaration_pattern))
        )
      ),

    _function_declaration_pattern: ($) =>
      choice(
        $.anything_pattern,
        $.lower_pattern,
        $.tuple_pattern,
        $.unit_expr,
        $.list_pattern,
        $.record_pattern,
        $._literal_expr_group,
        $._parenthesized_pattern
      ),

    // TYPE DECLARATIONS AND REFERENCES

    type_expression: ($) => arrowSep1($._type_expression_inner, $.arrow),

    _type_expression_inner: ($) =>
      choice($.type_ref, $._single_type_expression),

    type_ref: ($) =>
      prec(2, seq($.upper_case_qid, repeat1($._single_type_expression))),

    _single_type_expression: ($) =>
      choice(
        field("part", alias($.type_ref_without_args, $.type_ref)),
        field("part", $.type_variable),
        field("part", $.record_type),
        field("part", $.tuple_type),
        seq(
          $.left_parenthesis,
          field("part", $.type_expression),
          $.right_parenthesis
        )
      ),

    type_variable: ($) => $.lower_case_identifier,

    type_annotation: ($) =>
      seq(
        field("name", $.lower_case_identifier),
        $.colon,
        field("typeExpression", $.type_expression)
      ),

    _expression: ($) => choice($.bin_op_expr, $._call_or_atom),

    bin_op_expr: ($) =>
      field(
        "part",
        prec(
          5,
          seq(
            $._call_or_atom,
            prec.right(repeat1(seq($.operator, $._call_or_atom)))
          )
        )
      ),

    operator: ($) => $.operator_identifier,

    _call_or_atom: ($) => choice($.function_call_expr, $._atom),

    function_call_expr: ($) =>
      prec.dynamic(
        10,
        seq(
          field("target", $._function_call_target),
          field("arg", repeat1($._atom))
        )
      ),

    _function_call_target: ($) =>
      prec(
        2,
        choice(
          $.field_access_expr,
          $.value_expr,
          $.field_accessor_function_expr,
          $.operator_as_function_expr,
          $.parenthesized_expr
        )
      ),

    _atom: ($) =>
      choice(
        $._literal_expr_group,
        $.negate_expr,
        $.field_access_expr,
        $.value_expr,
        $.field_accessor_function_expr,
        $.operator_as_function_expr,
        $.parenthesized_expr,
        $.unit_expr,
        $.tuple_expr,
        $.list_expr,
        $.record_expr,
        $.if_else_expr,
        $.case_of_expr,
        $.let_in_expr,
        $.anonymous_function_expr,
        $.glsl_code_expr
      ),

    field_access_expr: ($) =>
      prec.left(
        seq(
          field("target", $._field_access_start),
          repeat1($._field_access_segment)
        )
      ),

    _field_access_start: ($) =>
      prec(
        3,
        choice(
          $.field_access_expr,
          choice($.value_expr, $.parenthesized_expr, $.record_expr)
        )
      ),

    _field_access_segment: ($) =>
      prec.left(
        seq(
          alias($._dot_without_leading_whitespace, $.dot),
          alias(
            $._lower_case_identifier_without_leading_whitespace,
            $.lower_case_identifier
          )
        )
      ),

    parenthesized_expr: ($) =>
      seq($.left_parenthesis, $._expression, $.right_parenthesis),

    number_constant_expr: ($) => $.number_literal,

    string_constant_expr: ($) =>
      choice(
        seq($.open_quote, optional($._string_parts), $.close_quote),
        seq(
          alias($.open_quote_multiline, $.open_quote),
          optional($._string_parts_multiline),
          alias($.close_quote_multiline, $.close_quote)
        )
      ),

    _string_parts: ($) => repeat1($._string_part),
    _string_parts_multiline: ($) => repeat1($._string_part_multiline),

    anonymous_function_expr: ($) =>
      seq(
        $.backslash,
        field("param", repeat1($.pattern)),
        $.arrow,
        field("expr", $._expression)
      ),

    value_expr: ($) => field("name", choice($.value_qid, $.upper_case_qid)),

    record_expr: ($) =>
      seq($.left_brace, optional($._record_inner), $.right_brace),

    record_base_identifier: ($) => $.lower_case_identifier,

    _record_inner: ($) => seq(optional($._record_base), $._record_inner_fields),

    field: ($) =>
      seq(
        field("name", $.lower_case_identifier),
        $.eq,
        field("expression", $._expression)
      ),

    case_of_expr: ($) =>
      seq($.case, field("expr", $._expression), $._case_of_tail),

    _case_of_tail: ($) => seq($.of, $._case_of_tail2),

    case_of_branch: ($) =>
      seq(field("pattern", $.pattern), $.arrow, field("expr", $._expression)),

    pattern: ($) =>
      seq(
        choice(field("child", $.cons_pattern), $._single_pattern),
        optional($._pattern_as)
      ),

    _pattern_as: ($) => seq($.as, field("patternAs", $.lower_pattern)),

    _single_pattern: ($) =>
      choice(
        $._parenthesized_single_pattern,
        field("child", $.anything_pattern),
        field("child", $.lower_pattern),
        field("child", $.union_pattern),
        field("child", $.tuple_pattern),
        field("child", $.unit_expr),
        field("child", $.list_pattern),
        field("child", $.record_pattern),
        field("child", $._literal_expr_group)
      ),

    lower_pattern: ($) => $.lower_case_identifier,

    anything_pattern: ($) => $.underscore,

    list_pattern: ($) =>
      seq(
        $.left_square_bracket,
        optional(commaSep1(field("part", $.pattern), $.comma)),
        $.right_square_bracket
      ),

    union_pattern: ($) =>
      prec.left(
        seq(
          field("constructor", $.upper_case_qid),
          field("argPattern", repeat($._union_argument_pattern))
        )
      ),

    _union_argument_pattern: ($) =>
      choice(
        $.anything_pattern,
        $.lower_pattern,
        $.tuple_pattern,
        $.upper_case_qid,
        $.unit_expr,
        $.list_pattern,
        $.record_pattern,
        $._literal_expr_group,
        $._parenthesized_pattern
      ),

    number_literal: ($) =>
      choice(/-?[0-9]+(\.[0-9]+)?(e-?[0-9]+)?/, $._hex_literal),

    _hex_literal: ($) => /0x[0-9A-Fa-f]+/,

    regular_string_part: ($) => choice(/[^\\\"\n]+/, /\"/),
    case: ($) => "case",
    of: ($) => "of",
    left_parenthesis: ($) => "(",
    right_parenthesis: ($) => ")",
    left_square_bracket: ($) => "[",
    right_square_bracket: ($) => "]",
    left_brace: ($) => "{",
    right_brace: ($) => "}",
    eq: ($) => "=",
    arrow: ($) => "->",
    colon: ($) => ":",
    pipe: ($) => "|",
    backslash: ($) => "\\",
    underscore: ($) => "_",
    dot: ($) => ".",
    operator_identifier: ($) =>
      choice(
        "+",
        "-",
        "*",
        "/",
        "//",
        "^",
        "==",
        "/=",
        "<",
        ">",
        "<=",
        ">=",
        "&&",
        "||",
        "++",
        "<|",
        "|>",
        "<<",
        ">>",
        "::",
        "</>",
        "<?>",
        "|.",
        "|="
      ),
